--- a/index.html
+++ b/index.html
@@ -3,17 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--FONT AWESOME-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
+    <!--CSS-->
     <link rel="stylesheet" href="css/style.css">
 
+    <!--VUE-JS-->
     <script src="https://unpkg.com/vue@3"></script>
 </head>
 <body>
     <div id="app">
+
+        <div class="row-big">
+            <!--container della pagina-->
+            <div class="container-big">
+                <!--colonna dei contatti-->
+                <div class="col-left">
+                    <div class="header-left">
+                        <div class="personal-profile">
+                            <img class="avatar" src="img/img/avatar_io.jpg">
+                            <h4>Sofia</h4>
+                        </div>
+                        <div class="settings">
+                            <i class="fa-solid fa-circle-notch"></i>
+                            <i class="fa-solid fa-message"></i>
+                            <i class="fa-solid fa-ellipsis-vertical"></i>
+                        </div>
+                    </div>
+                    <div class="notifications">
+                        <div class="bell"><i class="fa-solid fa-bell-slash"></i></div>
+                        <div>
+                            <h4>Ricevi notifiche di nuovi messaggi</h4>
+                            <p>Attiva notifiche desktop</p>
+                        </div>
+                    </div>
+                    <div class="search-contact">
+                        <div class="search-lens"><i class="fa-solid fa-magnifying-glass"></i></div>
+                        <div class="search-input"><input type="text" placeholder="Cerca o inizia una nuova chat"></div>
+                    </div>
+
+                    <!--contatti da stampare dinamicamente-->
+                    <div class="contacts">
+                        <div class="avatar-name">
+                            <div><img class="avatar" src="img/img/avatar_1.jpg"></div>
+                            <div>
+                                <h3>Michele</h3>
+                            </div>
+                        </div>
+                        <div class="time"><p>12:00</p></div>
+                    </div>
+                </div>
+
+                <!--colonna della chat-->
+                <div class="col-right"></div>
+            </div>
+        </div>
         
     </div>
     
-
+    <!--JAVASCRIPT-->
     <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
