--- a/index.html
+++ b/index.html
@@ -73,14 +73,21 @@
                         </div>
                     </div>
                     <div class="ms-chat-box">
-                        <!--messaggio inviato-->
+                        <div id="chat-page">
+                            <div class="chat-mexage" v-for="(mex, index) in contacts[nameActive].messages" >
+                                <p :class="mex.status"> {{ mex.message}}
+                                    <span class="time-messages">12:00 </span>
+                                </p>
+                            </div>
+                        </div>
+                        <!--messaggio inviato
                         <div class="ms-mess-receved">
                             <div class="message">
                                 <div class="text-mess"><p>ciao</p></div>
                                 <div class="mess-time"><small>12:00</small></div>
                             </div>
                         </div><br>
-                        <!--messaggio ricevuto-->
+                        messaggio ricevuto
                         <div class="my-mess">
                             <div class="ms-mess-sent">
                                 <div class="message">
@@ -88,7 +95,7 @@
                                     <div class="mess-time"><small>12:00</small></div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="ms-footer-chat">
                         <div><i class="fa-regular fa-face-smile"></i></div>
